# jongfish

./: CHANGES.md  CHANGES_SUMMARY.md  COMMIT_MSG.txt  DOCUMENTATION.md  HEURISTIC_EXAMPLES.cpp  Makefile  PERFORMANCE_ANALYSIS.md  README.md  chess.cpp  chess_20260202_100917.pgn
chess_engine/: CMakeLists.txt  build.bat
chess_engine/engine/board/: Board.cpp  Board.h
chess_engine/engine/cli/: CLI.cpp  CLI.h
chess_engine/engine/eval/: Eval.h
chess_engine/engine/movegen/: MoveGen.h
chess_engine/engine/search/: Search.cpp  Search.h
chess_engine/engine/util/: PGN.h
chess_engine/tests/: perft_test.cpp
chess_engine_old/: Makefile  game.pgn  game.txt
chess_engine_old/engine/: main.cpp
chess_engine_old/engine/board/: Board.cpp  Board.h
chess_engine_old/engine/cli/: CLI.cpp  CLI.h
chess_engine_old/engine/docs/: ENGINE_DOC.md  README.md
chess_engine_old/engine/eval/: Eval.cpp
chess_engine_old/engine/movegen/: MoveGen.cpp
chess_engine_old/engine/search/: Search.cpp  Search.h
chess_engine_old/engine/util/: PGN.cpp
games/: 20260204_log.txt  chess_20260203_093314.pgn  chess_20260203_094424.pgn  chess_20260203_152012.pgn  chess_20260204_221900.pgn
